<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/panicButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:background="@null"
            android:src="@mipmap/sos"/>

        <TextView
            android:id="@+id/my_info_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/my_info"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text|textPersonName"
            android:paddingTop="5dp"
            android:hint="@string/name"/>
        <EditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:hint="@string/phoneNumber" />
        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:hint="@string/emailAddress" />

        <Button
            android:id="@+id/save_my_info_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <TextView
            android:id="@+id/emergency_info_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:text="@string/emergency_info"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/emergency_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:inputType="text|textPersonName"
            android:paddingTop="5dp"/>
        <EditText
            android:id="@+id/emergency_phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:hint="@string/phoneNumber" />
        <EditText
            android:id="@+id/emergency_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:hint="@string/emailAddress"/>

        <Button
            android:id="@+id/save_emergency_info_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>